--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "homepage-luca",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Code for my homepage",
   "author": "Luca Claessens",
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack --config webpack.prod.js",
-    "start": "webpack-dev-server --config webpack.dev.js",
+    "dev": "sapper dev",
+    "build": "sapper build",
+    "export": "sapper export",
+    "start": "node __sapper__/build",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
+    "test": "run-p --race dev cy:run",
     "deploy": "firebase use lucaclaessens-32287 && npm run build && firebase deploy"
   },
   "repository": {
@@ -16,38 +21,20 @@
   },
   "keywords": [],
   "dependencies": {
-    "airbnb-browser-shims": "^3.0.0",
-    "autoprefixer": "^9.4.2",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "clean-webpack-plugin": "^1.0.0",
-    "cssnano": "^4.1.7",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "import-glob-loader": "^1.1.0",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.27.1",
-    "webpack-merge": "^4.1.4",
-    "webpack-notifier": "^1.7.0",
-    "write-file-webpack-plugin": "^4.5.0"
+    "compression": "^1.7.1",
+    "polka": "next",
+    "sirv": "^0.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "babel-loader": "^8.0.4",
-    "babel-preset-airbnb": "^3.0.1",
-    "browser-sync": "^2.26.7",
-    "css-loader": "^2.0.0",
-    "eslint": "^5.9.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
-    "node-sass": "^4.10.0",
-    "postcss-loader": "^3.0.0",
-    "rucksack-css": "^1.0.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.9.0"
+    "autoprefixer": "^9.7.1",
+    "node-sass": "^4.13.0",
+    "npm-run-all": "^4.1.5",
+    "sapper": "^0.27.0",
+    "sass": "^1.23.3",
+    "svelte": "^3.0.0",
+    "svelte-loader": "^2.9.0",
+    "svelte-preprocess": "^3.2.2",
+    "webpack": "^4.7.0"
   },
   "browserslist": [
     "> 1%",
