--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,27 +1,31 @@
-backend:
+backend: 
+  branch: master
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
-publish_mode: editorial_workflow # Allows you to save drafts before publishing them
-media_folder: static/uploads # Media files will be stored in the repo under static/images/uploads
-public_folder: /uploads # The src attribute for uploaded media will begin with /images/uploads
-
-collections:
-  - name: "projects" # Used in routes, e.g., /admin/collections/blog
-    label: "Projects" # Used in the UI
-    folder: "static/_posts" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{slug}}" # Filename template, e.g., title.md
-    fields: # The fields for each document, usually in front matter
-      - label: "Layout"
-        name: "layout"
-        widget: "hidden" 
-        default: "blog"
-      - label: "Title"
-        name: "title"
-        widget: "string"
-      - label: "Publish Date"
-        name: "date"
-        widget: "datetime"
-      - label: "Body"
-        name: "body"
-        widget: "markdown"
+collections: 
+  - 
+    create: true
+    fields: 
+      - 
+        default: blog
+        label: Layout
+        name: layout
+        widget: hidden
+      - 
+        label: Title
+        name: title
+        widget: string
+      - 
+        label: "Publish Date"
+        name: date
+        widget: datetime
+      - 
+        label: Body
+        name: body
+        widget: markdown
+    folder: static/_posts
+    label: Projects
+    name: projects
+    slug: "{{slug}}"
+media_folder: static/uploads
+public_folder: /uploads
+publish_mode: editorial_workflow
