--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,31 +1,16 @@
 backend: 
   branch: master
   name: git-gateway
-collections: 
-  - 
+  repo: LucaClaessens/Homepage
+collections:
+  - name: blog
+    label: Blog
+    folder: blog
     create: true
-    fields: 
-      - 
-        default: blog
-        label: Layout
-        name: layout
-        widget: hidden
-      - 
-        label: Title
-        name: title
-        widget: string
-      - 
-        label: "Publish Date"
-        name: date
-        widget: datetime
-      - 
-        label: Body
-        name: body
-        widget: markdown
-    folder: static/_posts
-    label: Projects
-    name: projects
-    slug: "{{slug}}"
-media_folder: static/uploads
-public_folder: /uploads
-publish_mode: editorial_workflow
+    fields:
+      - { label: Template Key, name: templateKey, widget: hidden, default: blog-post }
+      - { name: path, label: Path }
+      - { name: date, label: Date, widget: date }
+      - { name: tumbnail, label: Featured Image, widget: image }
+      - { name: title, label: Title }
+      - { name: body, label: Body, widget: markdown }
