--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "keywords": [],
   "dependencies": {
     "compression": "^1.7.1",
+    "front-matter": "^3.0.2",
+    "glob": "^7.1.6",
+    "markdown-it": "^10.0.0",
+    "mz": "^2.7.0",
     "polka": "next",
     "sirv": "^0.4.0"
   },
