--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,17 +3,13 @@ backend:
   name: git-gateway
   repo: LucaClaessens/Homepage
 collections:
-  - name: blog
-    label: Blog
-    folder: blog
-    create: true
-    fields:
-      - { label: Template Key, name: templateKey, widget: hidden, default: blog-post }
-      - { name: path, label: Path }
-      - { name: date, label: Date, widget: date }
-      - { name: tumbnail, label: Featured Image, widget: image }
-      - { name: title, label: Title }
-      - { name: body, label: Body, widget: markdown }
-publish_mode: editorial_workflow
-media_folder: static/uploads
-public_folder: /uploads
+  - name: "project" # Used in routes, e.g., /admin/collections/blog
+    label: "Projects" # Used in the UI
+    folder: "static/_projects" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Body", name: "body", widget: "markdown"}
