--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,14 +7,15 @@ media_folder: static/uploads
 public_folder: /uploads
 collections:
   - name: "project" # Used in routes, e.g., /admin/collections/blog
-    label: "Projects" # Used in the UI
-    folder: "static/_projects" # The path to the folder where the documents are stored
+    label: "Posts" # Used in the UI
+    folder: "static/_posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Type", name: "type", widget: "select", options: ["design", "research", "text", "thought", "ramble"] }
+      - {label: "Featured image", name: "featuredImage", widget: "image"}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Body", name: "body", widget: "markdown"}
