--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
     "compression": "^1.7.1",
     "front-matter": "^3.0.2",
     "glob": "^7.1.6",
+    "highlight.js": "^10.4.0",
     "markdown-it": "^10.0.0",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-implicit-figures": "^0.10.0",
     "mz": "^2.7.0",
     "polka": "next",
     "sirv": "^0.4.0",
+    "svelte-inline-svg": "^1.0.1",
     "svelte-media": "0.0.3"
   },
   "devDependencies": {
