--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,16 +6,29 @@ publish_mode: editorial_workflow
 media_folder: static/uploads
 public_folder: /uploads
 collections:
-  - name: "project" # Used in routes, e.g., /admin/collections/blog
-    label: "Posts" # Used in the UI
-    folder: "static/_posts" # The path to the folder where the documents are stored
+  - name: "selected-works" # Used in routes, e.g., /admin/collections/blog
+    label: "Selected work" # Used in the UI
+    folder: "static/_selected-works" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Type", name: "type", widget: "select", options: ["design", "research", "text", "thought", "ramble"] }
-      - {label: "Featured image", name: "featuredImage", widget: "image"}
+      - {label: "Featured image", name: "featuredImage", widget: "image", media_library: {config: {multiple: true}}}
+      - {label: "Description", name: "description", widget: "text"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Body", name: "body", widget: "markdown"}
+  - name: "experiments" # Used in routes, e.g., /admin/collections/blog
+    label: "Experiment" # Used in the UI
+    folder: "static/_experiments" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Type", name: "type", widget: "select", options: ["design", "research", "text", "thought", "ramble"] }
+      - {label: "Featured image", name: "featuredImage", widget: "image", media_library: {config: {multiple: true}}}
       - {label: "Description", name: "description", widget: "text"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Body", name: "body", widget: "markdown"}
