--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "svelte": "^3.0.0",
     "svelte-loader": "^2.9.0",
     "svelte-preprocess": "^3.2.2",
+    "swiper": "^6.3.5",
     "webpack": "^4.28.4"
   },
   "browserslist": [
