--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.7.1",
+    "cypress": "^6.0.0",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "sapper": "^0.27.0",
