--- a/package.json
+++ b/package.json
@@ -24,13 +24,19 @@
     "compression": "^1.7.1",
     "front-matter": "^3.0.2",
     "glob": "^7.1.6",
+    "highlight.js": "^10.4.0",
     "markdown-it": "^10.0.0",
+    "markdown-it-abbr": "^1.0.4",
+    "markdown-it-footnote": "^3.0.2",
+    "markdown-it-implicit-figures": "^0.10.0",
     "mz": "^2.7.0",
     "polka": "next",
-    "sirv": "^0.4.0"
+    "sirv": "^0.4.0",
+    "svelte-media": "0.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.1",
+    "cypress": "^6.0.0",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "sapper": "^0.27.0",
@@ -38,6 +44,7 @@
     "svelte": "^3.0.0",
     "svelte-loader": "^2.9.0",
     "svelte-preprocess": "^3.2.2",
+    "swiper": "^6.3.5",
     "webpack": "^4.28.4"
   },
   "browserslist": [
