--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,13 +6,44 @@ publish_mode: editorial_workflow
 media_folder: static/uploads
 public_folder: /uploads
 collections:
-  - name: "project" # Used in routes, e.g., /admin/collections/blog
-    label: "Projects" # Used in the UI
-    folder: "static/_projects" # The path to the folder where the documents are stored
+  - name: "selected-works" # Used in routes, e.g., /admin/collections/blog
+    label: "Selected work" # Used in the UI
+    folder: "static/_selected-works" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
+      - {label: "Subtitle", name: "subtitle", widget: "text"}
+      - {label: "Responsibilities", name: "responsibilities", widget: "string"}
+      - {label: "Web address", name: "url", widget: "string"}
+      - {label: "Featured media", name: "featured_media", widget: "select", options: ["image", "vimeo_embed"] }
+      - {label: "Images", name: "images", widget: "list", summary: '{{fields.image}}', field: {label: "image", name: "image", widget: "image"}}
+      - {label: "Embed ID", name: "embed_id", widget: "string"}
+      - {label: "Featured Media Subtitle", name: "featured_media_subtitle", widget: "text"}
+      - {label: "Overview image", name: "overview_image", widget: "image"}
+      - {label: "Overview style", name: "overview_style", widget: "select", options: ["cover", "contain"] }
+      - {label: "Short Description", name: "short_description", widget: "text"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Body", name: "body", widget: "markdown"}
+  - name: "experiments" # Used in routes, e.g., /admin/collections/blog
+    label: "Experiment" # Used in the UI
+    folder: "static/_experiments" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Subtitle", name: "subtitle", widget: "text"}
+      - {label: "Web address", name: "url", widget: "string"}
+      - {label: "Featured media", name: "featured_media", widget: "select", options: ["image", "vimeo_embed", "stackblitz", "other"] }
+      - {label: "Images", name: "images", widget: "list", summary: '{{fields.image}}', field: {
+label: "image", name: "image", widget: "image"
+      }}
+      - {label: "Embed ID", name: "embed_id", widget: "string"}
+      - {label: "Featured Media Subtitle", name: "featured_media_subtitle", widget: "text"}
+      - {label: "Overview image", name: "overview_image", widget: "image"}
+            - {label: "Overview style", name: "overview_style", widget: "select", options: ["cover", "contain"] }
+      - {label: "Short Description", name: "short_description", widget: "text"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Body", name: "body", widget: "markdown"}
