--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cy:run": "cypress run",
     "cy:open": "cypress open",
     "test": "run-p --race dev cy:run",
-    "deploy": "firebase use lucaclaessens-32287 && npm run build && firebase deploy"
+    "deploy": "firebase use lucaclaessens-32287 && npm run export && firebase deploy",
+    "deploy:test": "firebase use lucaclaessens-32287 && npm run export && firebase hosting:channel:deploy preview"
   },
   "repository": {
     "type": "git",
