--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run",
-    "deploy": "firebase use lucaclaessens-32287 && npm run export && firebase deploy",
-    "deploy:test": "firebase use lucaclaessens-32287 && npm run export && firebase hosting:channel:deploy preview"
+    "test": "run-p --race dev cy:run"
   },
   "repository": {
     "type": "git",
